--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,4 @@ install:
 	- gradle assemble
 script:
 	- gradle test
+    - gradle sonarqube -Dsonar.host.utl=$SONAR_HOST_URL -Dsonar.login=$SONAR_TOKEN
